5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1573_1332.log
== TEST (2019-03-29 20:20:42) 
-- CODE:
aresta = 5
area = A
=
3
2
√
3
a
2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    =
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:20) 
-- CODE:
aresta = 5
area = 3/2
 
print(round(area, 4))
-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:49) 
-- CODE:
aresta = 5
area = 3/2*(3a)**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3a)**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:10) 
-- CODE:
aresta = 5
area = 3/2*(3*5)**2
 
print(round(area, 4))
-- OUTPUT:
337.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:31:13) 
-- CODE:
aresta = 5
area = 3/2*(3*5)**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.172148
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
337.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:45) 
-- CODE:
aresta = 5
area = 3/2*(3*5**2)**2
 
print(round(area, 4))
-- OUTPUT:
8437.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:31:47) 
-- CODE:
aresta = 5
area = 3/2*(3*5**2)**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.187354
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
8437.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:04) 
-- CODE:
aresta = 5
area = (3/2)*(3a**2)**0.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = (3/2)*(3a**2)**0.5
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:16) 
-- CODE:
aresta = 5
area = (3/2)*(3*5**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:19) 
-- CODE:
aresta = 5
area = (3/2)*(3*5**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.218942
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:27) 
-- CODE:
aresta = 5
area = (3/2)*(3*a**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.17456
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = (3/2)*(3*a**2)**0.5
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:28) 
-- CODE:
aresta = 5
area = (3/2)*(3*a**2)**0.5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3*a**2)**0.5
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:44) 
-- CODE:
aresta = 5
area = (3/2)*(3*5**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:36) 
-- CODE:
aresta = 5
area = 12.9900
 
print(round(area, 4))
-- OUTPUT:
12.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:43) 
-- CODE:
aresta = 5
area = 12.99000000
 
print(round(area, 4))
-- OUTPUT:
12.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:47:45) 
-- CODE:
aresta = 5
area = 12.99000000
 
print(round(area, 4))
-- EXECUTION TIME:
0.148675
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:24) 
-- CODE:
aresta = 5
area = 3/2*3
 
print(round(area, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:45) 
-- CODE:
aresta = 5
area = 3/2*3*0.5*5**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:48:47) 
-- CODE:
aresta = 5
area = 3/2*3*0.5*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.225167
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:28) 
-- CODE:
aresta = 5
area = 3/2*(3*5**2)*0.5
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:49:29) 
-- CODE:
aresta = 5
area = 3/2*(3*5**2)*0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.188735
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:18) 
-- CODE:
aresta = 5
area = 3/2*(3*5**0.5)
 
print(round(area, 4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:20) 
-- CODE:
aresta = 5
area = 3/2*(3*5**0.5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.117058
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.0623
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:25) 
-- CODE:
aresta = 5
area = 3/2*(3*5**0.5)*2
 
print(round(area, 4))
-- EXECUTION TIME:
0.217922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
20.1246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:26) 
-- CODE:
aresta = 5
area = 3/2*(3*5**0.5)*2
 
print(round(area, 4))
-- EXECUTION TIME:
0.205009
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
20.1246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:26) 
-- CODE:
aresta = 5
area = 3/2*(3*5**0.5)*2
 
print(round(area, 4))
-- OUTPUT:
20.1246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:37) 
-- CODE:
aresta = 5
area = 3/2*(3*5**2**0.5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.126759
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
43.8233
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:16) 
-- CODE:
aresta = 5
area = 3/2*(3*5)**0.5
 
print(round(area, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:09:19) 
-- CODE:
aresta = 5
area = 3/2*(3*5)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.133154
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:29) 
-- CODE:
aresta = 5
area = 3/2*(3*5)**0.5**2
 
print(round(area, 4))
-- OUTPUT:
2.952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:09:30) 
-- CODE:
aresta = 5
area = 3/2*(3*5)**0.5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.183687
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.952
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:19) 
-- CODE:
aresta = 5
area = 3/2*(3)**0.5*5**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:10:21) 
-- CODE:
aresta = 5
area = 3/2*(3)**0.5*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.153841
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
